--- a/JTree/qml.qrc
+++ b/JTree/qml.qrc
@@ -1,6 +1,12 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>MainForm.ui.qml</file>
+        <file>res/qml/main.qml</file>
+        <file>res/qml/MainForm.ui.qml</file>
+        <file>res/qml/MainActions.qml</file>
+        <file>res/qml/MainMenu.qml</file>
+        <file>res/img/about.svg</file>
+        <file>res/img/connect.svg</file>
+        <file>res/img/exit.png</file>
+        <file>res/img/go.svg</file>
     </qresource>
 </RCC>
